Purge older messages in test server
This prevents potential memory issues if the server is running for a long time.